--- a/public/main.css
+++ b/public/main.css
@@ -6,8 +6,53 @@ body {
   padding: 0;
 }
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 /* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
 #map {
   height: 100%;
+}
+
+.Sidebar {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: hsla(0, 0%, 0%, 0.8);
+}
+
+.SidebarList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.SidebarItem {
+  margin: 1em;
+}
+
+.Button {
+  display: block;
+  padding: 0.5em 1em;
+  border-radius: 120px;
+  border: 2px solid #0ff;
+  color: #0ff;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.Button:hover,
+.Button:focus {
+  background-color: #00ffff99;
+  color: black;
+}
+
+.active .Button {
+  background-color: aqua;
+  color: black;
 }
