- added states to the sidebar links - added some more notes and TODOs - revised the map coloring so it doesn't flash to a light gray on page load

--- a/public/main.css
+++ b/public/main.css
@@ -17,6 +17,11 @@ body {
   height: 100%;
 }
 
+body,
+#map > div {
+  background-color: black !important;
+}
+
 .Sidebar {
   z-index: 1;
   position: fixed;
