--- a/templates/index.pug
+++ b/templates/index.pug
@@ -3,11 +3,13 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title ps6 Playground | Nike Map - #{slug}
+    title ps6 Playground | Nike Map #{slug ? ' - ' + slug : ''}
     link(rel="stylesheet", href="./main.css")
   body
     .Sidebar
       ul.SidebarList
+        li.SidebarItem
+          a.Button(href="/") All
         each s in slugs
           li.SidebarItem(class=(s === slug ? 'active' : ''))
             a.Button(href="/" + s)= s
@@ -17,6 +19,6 @@ html(lang="en")
       //- [TODO] This feels weird and I'd like to target the lookup against the correct object ...
       //- perhaps combine years and states into 1 mappings object? Also, the states are the slug,
       //- not the formatted versions
-      window.data = window.mapData.byYear['#{slug}'] || window.mapData.byState['#{slug}'];
+      window.data = window.mapData.byYear['#{slug}'] || window.mapData.byState['#{slug}'] || window.mapData.all;
     script(src="./main.js")
     script(async, defer, src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7g9tQ4aXGllZhSrNVeF4a3shwNKMeIRA&callback=initMap")
